--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -15,6 +15,13 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v3
 
+            - name: Send Notification 1
+              run: |
+                  curl -u ${{ secrets.NTFY_CRED }} \
+                    -d "Initiating Production Deployment! 🚀💻" \
+                    -H "Title: GitHub Baba" \
+                    ${{ secrets.NTFY_URL }}
+
             - name: Install jq
               run: sudo apt-get install jq
 
@@ -22,6 +29,13 @@ jobs:
               uses: actions/setup-node@v3
               with:
                   node-version: 21
+
+            - name: Send Notification 2
+              run: |
+                  curl -u ${{ secrets.NTFY_CRED }} \
+                    -d "Node.js Installed! 🚀💻" \
+                    -H "Title: GitHub Baba" \
+                    ${{ secrets.NTFY_URL }}
 
             - uses: pnpm/action-setup@v2
               name: Install pnpm
@@ -42,12 +56,43 @@ jobs:
                   restore-keys: |
                       ${{ runner.os }}-pnpm-store-
 
+            - name: Send Notification 3
+              run: |
+                  curl -u ${{ secrets.NTFY_CRED }} \
+                    -d "pnpm Installed! 🚀💻" \
+                    -H "Title: GitHub Baba" \
+                    ${{ secrets.NTFY_URL }}
+
             - name: Install Vercel CLI
               run: pnpm add -g vercel@latest
+
+            - name: Send Notification 4
+              run: |
+                  curl -u ${{ secrets.NTFY_CRED }} \
+                    -d "Vercel CLI Installed! 🚀💻" \
+                    -H "Title: GitHub Baba" \
+                    ${{ secrets.NTFY_URL }}
+
             - name: Pull Vercel Environment Information
               run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
+
+            - name: Send Notification 5
+              run: |
+                  curl -u ${{ secrets.NTFY_CRED }} \
+                    -d "Vercel Environment Information Pulled! 🚀💻" \
+                    -H "Title: GitHub Baba" \
+                    ${{ secrets.NTFY_URL }}
+
             - name: Build Project Artifacts
               run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
+
+            - name: Send Notification 6
+              run: |
+                  curl -u ${{ secrets.NTFY_CRED }} \
+                    -d "Project Artifacts Built! 🚀💻" \
+                    -H "Title: GitHub Baba" \
+                    ${{ secrets.NTFY_URL }}
+
             - name: Deploy Project Artifacts to Vercel
               id: preview
               run: |
@@ -55,6 +100,13 @@ jobs:
                   deploymentUrl=$(cat deployment-url.txt)
                   echo "Vercel Preview URL: $deploymentUrl"
                   echo "DEPLOYMENT_URL=$deploymentUrl" >> $GITHUB_OUTPUT
+
+            - name: Send Notification 7
+              run: |
+                  curl -u ${{ secrets.NTFY_CRED }} \
+                    -d "Project Artifacts Deployed! 🚀💻" \
+                    -H "Title: GitHub Baba" \
+                    ${{ secrets.NTFY_URL }}
     Ntfy-Success:
         needs: Deploy-Preview
         runs-on: ubuntu-latest
