--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "remark-gfm": "^3.0.1",
         "remark-html": "^16.0.1",
         "remark-math": "^5.1.1",
+        "sharp": "^0.33.2",
         "tailwind-merge": "^1.14.0",
         "tailwindcss": "^3.3.3",
         "tailwindcss-animate": "^1.0.7",
