--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -15,7 +15,7 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v3
 
-            - name: Send Notification 1
+            - name: Send Notification
               run: |
                   curl -u ${{ secrets.NTFY_CRED }} \
                     -d "Initiating Production Deployment! 🚀💻" \
@@ -26,13 +26,6 @@ jobs:
               uses: actions/setup-node@v3
               with:
                   node-version: 21
-
-            - name: Send Notification 2
-              run: |
-                  curl -u ${{ secrets.NTFY_CRED }} \
-                    -d "Node.js Installed! 🚀💻" \
-                    -H "Title: GitHub Baba" \
-                    ${{ secrets.NTFY_URL }}
 
             - uses: pnpm/action-setup@v2
               name: Install pnpm
@@ -53,42 +46,14 @@ jobs:
                   restore-keys: |
                       ${{ runner.os }}-pnpm-store-
 
-            - name: Send Notification 3
-              run: |
-                  curl -u ${{ secrets.NTFY_CRED }} \
-                    -d "pnpm Installed! 🚀💻" \
-                    -H "Title: GitHub Baba" \
-                    ${{ secrets.NTFY_URL }}
-
             - name: Install Vercel CLI
               run: pnpm add -g vercel@latest
-
-            - name: Send Notification 4
-              run: |
-                  curl -u ${{ secrets.NTFY_CRED }} \
-                    -d "Vercel CLI Installed! 🚀💻" \
-                    -H "Title: GitHub Baba" \
-                    ${{ secrets.NTFY_URL }}
 
             - name: Pull Vercel Environment Information
               run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
 
-            - name: Send Notification 5
-              run: |
-                  curl -u ${{ secrets.NTFY_CRED }} \
-                    -d "Vercel Environment Information Pulled! 🚀💻" \
-                    -H "Title: GitHub Baba" \
-                    ${{ secrets.NTFY_URL }}
-
             - name: Build Project Artifacts
               run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
-
-            - name: Send Notification 6
-              run: |
-                  curl -u ${{ secrets.NTFY_CRED }} \
-                    -d "Project Artifacts Built! 🚀💻" \
-                    -H "Title: GitHub Baba" \
-                    ${{ secrets.NTFY_URL }}
 
             - name: Deploy Project Artifacts to Vercel
               id: preview
@@ -98,12 +63,6 @@ jobs:
                   echo "Vercel Production URL: $deploymentUrl"
                   echo "DEPLOYMENT_URL=$deploymentUrl" >> $GITHUB_OUTPUT
 
-            - name: Send Notification 7
-              run: |
-                  curl -u ${{ secrets.NTFY_CRED }} \
-                    -d "Project Artifacts Deployed to Vercel! 🚀💻" \
-                    -H "Title: GitHub Baba" \
-                    ${{ secrets.NTFY_URL }}
     Ntfy-Success:
         needs: Deploy-Production
         runs-on: ubuntu-latest
