--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
         "clsx": "^2.0.0",
         "contentlayer": "0.3.4",
         "esbuild": "0.18.11",
+        "framer-motion": "^11.0.3",
         "github-slugger": "^1.4.0",
         "gray-matter": "^4.0.2",
+        "gsap": "^3.12.5",
         "image-size": "1.0.0",
+        "locomotive-scroll": "^4.1.4",
         "lucide-react": "^0.276.0",
         "next": "14.0.4",
         "next-contentlayer": "0.3.4",
