--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     },
     "dependencies": {
         "@next/bundle-analyzer": "13.4.19",
+        "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-tooltip": "^1.0.6",
         "@tailwindcss/forms": "^0.5.4",
         "@tailwindcss/typography": "^0.5.9",
@@ -94,6 +96,5 @@
         "*.+(js|jsx|ts|tsx|json|css|md|mdx)": [
             "prettier --write"
         ]
-    },
-    "packageManager": "yarn@3.6.1"
+    }
 }
