--- a/components.json
+++ b/components.json
@@ -10,7 +10,7 @@
         "cssVariables": true
     },
     "aliases": {
-        "components": "@/components",
+        "components": "@/components/shadcn",
         "utils": "@/scripts/utils/tailwind-helpers"
     }
 }
