--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@next/bundle-analyzer": "13.4.19",
         "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-separator": "^1.1.1",
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-tooltip": "^1.0.6",
         "@tailwindcss/forms": "^0.5.4",
