--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "@next/bundle-analyzer": "13.4.19",
+        "@radix-ui/react-avatar": "^1.1.11",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-separator": "^1.1.1",
         "@radix-ui/react-slot": "^1.0.2",
@@ -32,6 +33,7 @@
         "image-size": "1.0.0",
         "locomotive-scroll": "^4.1.4",
         "lucide-react": "^0.276.0",
+        "motion": "^12.23.26",
         "next": "14.0.4",
         "next-contentlayer": "0.3.4",
         "next-themes": "^0.2.1",
