--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
         "eslint-plugin-prettier": "^5.0.0",
         "husky": "^8.0.0",
         "lint-staged": "^13.0.0",
+        "postcss-nesting": "^13.0.2",
         "prettier": "^3.0.0",
         "prettier-plugin-tailwindcss": "^0.4.1",
         "typescript": "^5.1.3"
