feat: add ESLint configuration, update TypeScript settings, and enhance component structure for improved type safety and responsiveness

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "isolatedModules": true,
-        "jsx": "preserve",
+        "jsx": "react-jsx",
         "baseUrl": ".",
         "paths": {
             "@/components/*": ["components/*"],
@@ -34,6 +34,7 @@
     },
     "include": [
         "next-env.d.ts",
+        "types/**/*.d.ts",
         "**/*.js",
         "**/*.mjs",
         "**/*.ts",
@@ -41,7 +42,8 @@
         "**/*.json",
         ".contentlayer/generated",
         ".contentlayer/generated/**/*.json",
-        ".next/types/**/*.ts"
+        ".next/types/**/*.ts",
+        ".next/dev/types/**/*.ts"
     ],
     "exclude": ["node_modules"]
 }
