--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "prettier": "prettier --write ."
     },
     "dependencies": {
-        "@next/bundle-analyzer": "13.4.19",
+        "@next/bundle-analyzer": "16.1.1",
         "@radix-ui/react-avatar": "^1.1.11",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-separator": "^1.1.1",
@@ -31,16 +31,17 @@
         "gray-matter": "^4.0.2",
         "gsap": "^3.12.5",
         "image-size": "1.0.0",
+        "katex": "^0.16.27",
         "locomotive-scroll": "^4.1.4",
         "lucide-react": "^0.276.0",
         "motion": "^12.23.26",
-        "next": "14.0.4",
+        "next": "16.1.1",
         "next-contentlayer": "0.3.4",
         "next-themes": "^0.2.1",
         "pliny": "0.1.6",
         "postcss": "^8.4.24",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
+        "react": "19.2.3",
+        "react-dom": "19.2.3",
         "react-github-calendar": "^4.0.1",
         "react-grid-layout": "^1.4.1",
         "react-icons": "^4.11.0",
@@ -69,12 +70,12 @@
         "@svgr/webpack": "^8.0.1",
         "@trivago/prettier-plugin-sort-imports": "^4.2.0",
         "@types/mdx": "^2.0.5",
-        "@types/react": "^18.2.21",
+        "@types/react": "19.2.7",
         "@typescript-eslint/eslint-plugin": "^6.1.0",
         "@typescript-eslint/parser": "^6.1.0",
         "cross-env": "^7.0.3",
         "eslint": "^8.45.0",
-        "eslint-config-next": "14.0.4",
+        "eslint-config-next": "16.1.1",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^5.0.0",
         "husky": "^8.0.0",
@@ -91,7 +92,8 @@
         "@opentelemetry/resources": "1.13.0",
         "@opentelemetry/sdk-trace-base": "1.13.0",
         "@opentelemetry/sdk-trace-node": "1.13.0",
-        "@opentelemetry/semantic-conventions": "1.13.0"
+        "@opentelemetry/semantic-conventions": "1.13.0",
+        "@types/react": "19.2.7"
     },
     "lint-staged": {
         "*.+(js|jsx|ts|tsx)": [
