feat: integrate Clerk authentication and Convex functionality, add middleware for API routes, and update layout for improved structure

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "prettier": "prettier --write ."
     },
     "dependencies": {
+        "@clerk/nextjs": "^6.36.5",
         "@next/bundle-analyzer": "16.1.1",
         "@radix-ui/react-avatar": "^1.1.11",
         "@radix-ui/react-icons": "^1.3.0",
@@ -25,6 +26,7 @@
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
         "contentlayer": "0.3.4",
+        "convex": "^1.31.2",
         "esbuild": "0.18.11",
         "framer-motion": "^11.0.3",
         "github-slugger": "^1.4.0",
@@ -70,6 +72,7 @@
         "@svgr/webpack": "^8.0.1",
         "@trivago/prettier-plugin-sort-imports": "^4.2.0",
         "@types/mdx": "^2.0.5",
+        "@types/node": "^25.0.3",
         "@types/react": "19.2.7",
         "@typescript-eslint/eslint-plugin": "^6.1.0",
         "@typescript-eslint/parser": "^6.1.0",
