feat: implement admin panel with authentication, wishlist management, and user role validation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
             "@/layouts/*": ["layouts/*"],
             "@/css/*": ["css/*"],
             "@/scripts/*": ["scripts/*"],
+            "@/convex/*": ["convex/*"],
             "contentlayer/generated": ["./.contentlayer/generated"]
         },
         "plugins": [
