--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@clerk/nextjs": "^6.36.5",
         "@next/bundle-analyzer": "16.1.1",
         "@radix-ui/react-avatar": "^1.1.11",
+        "@radix-ui/react-checkbox": "^1.3.3",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-separator": "^1.1.1",
         "@radix-ui/react-slot": "^1.0.2",
@@ -42,6 +43,7 @@
         "next-themes": "^0.2.1",
         "pliny": "0.1.6",
         "postcss": "^8.4.24",
+        "razorpay": "^2.9.6",
         "react": "19.2.3",
         "react-dom": "19.2.3",
         "react-github-calendar": "^4.0.1",
