--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
     "private": true,
     "scripts": {
         "start": "next dev",
-        "dev": "cross-env INIT_CWD=$PWD next dev",
-        "build": "cross-env INIT_CWD=$PWD next build && cross-env NODE_OPTIONS='--experimental-json-modules' node ./scripts/postbuild.mjs",
+        "dev": "concurrently -n 📝,🔄,⚡ -c magenta,yellow,cyan --kill-others-on-fail \"contentlayer2 dev\" \"pnpm dlx convex dev\" \"cross-env INIT_CWD=$PWD NODE_OPTIONS='--max-old-space-size=2048' next dev\"",
+        "dev:next": "cross-env INIT_CWD=$PWD NODE_OPTIONS='--max-old-space-size=2048' next dev",
+        "dev:convex": "pnpm dlx convex dev",
+        "dev:content": "contentlayer2 dev",
+        "build": "contentlayer2 build && cross-env INIT_CWD=$PWD next build && cross-env NODE_OPTIONS='--experimental-json-modules' node ./scripts/postbuild.mjs",
+        "build:content": "contentlayer2 build",
         "serve": "next start",
         "analyze": "cross-env ANALYZE=true next build",
         "lint": "next lint --fix --dir pages --dir app --dir components --dir lib --dir layouts --dir scripts",
-        "prettier": "prettier --write ."
+        "prettier": "prettier --write .",
+        "clean": "rm -rf .next .contentlayer node_modules/.cache",
+        "typecheck": "tsc --noEmit"
     },
     "dependencies": {
         "@clerk/nextjs": "^6.36.5",
@@ -18,30 +24,29 @@
         "@radix-ui/react-checkbox": "^1.3.3",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-separator": "^1.1.1",
-        "@radix-ui/react-slot": "^1.0.2",
-        "@radix-ui/react-tooltip": "^1.0.6",
+        "@radix-ui/react-slot": "^1.2.4",
+        "@radix-ui/react-tooltip": "^1.2.7",
         "@tailwindcss/forms": "^0.5.4",
         "@tailwindcss/typography": "^0.5.9",
         "@upstash/redis": "^1.24.2",
         "autoprefixer": "^10.4.13",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
-        "contentlayer": "0.3.4",
+        "contentlayer2": "0.5.8",
         "convex": "^1.31.2",
         "esbuild": "0.18.11",
-        "framer-motion": "^11.0.3",
         "github-slugger": "^1.4.0",
         "gray-matter": "^4.0.2",
         "gsap": "^3.12.5",
         "image-size": "1.0.0",
         "katex": "^0.16.27",
         "locomotive-scroll": "^4.1.4",
-        "lucide-react": "^0.276.0",
+        "lucide-react": "^0.563.0",
         "motion": "^12.23.26",
         "next": "16.1.1",
-        "next-contentlayer": "0.3.4",
+        "next-contentlayer2": "0.5.8",
         "next-themes": "^0.2.1",
-        "pliny": "0.1.6",
+        "pliny": "0.4.1",
         "postcss": "^8.4.24",
         "razorpay": "^2.9.6",
         "react": "19.2.3",
@@ -62,7 +67,7 @@
         "rehype-raw": "^7.0.0",
         "rehype-slug": "^5.1.0",
         "remark": "^14.0.2",
-        "remark-gfm": "^3.0.1",
+        "remark-gfm": "^4.0.1",
         "remark-html": "^16.0.1",
         "remark-math": "^5.1.1",
         "tailwind-merge": "^1.14.0",
@@ -78,6 +83,7 @@
         "@types/react": "19.2.7",
         "@typescript-eslint/eslint-plugin": "^6.1.0",
         "@typescript-eslint/parser": "^6.1.0",
+        "concurrently": "^9.2.1",
         "cross-env": "^7.0.3",
         "eslint": "^8.45.0",
         "eslint-config-next": "16.1.1",
