--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
             "@/css/*": ["css/*"],
             "@/scripts/*": ["scripts/*"],
             "@/convex/*": ["convex/*"],
-            "contentlayer/generated": ["./.contentlayer/generated"]
+            "contentlayer/generated": ["./.contentlayer/generated"],
+            "contentlayer2/generated": ["./.contentlayer/generated"]
         },
         "plugins": [
             {
