refactor: update pnpm workspace and replace contentlayer with velite
- Removed 'contentlayer' from pnpm workspace dependencies.
- Updated RSS script to use 'velite' for blog data instead of 'contentlayer'.
- Adjusted TypeScript configuration to reflect changes in data source paths.
- Introduced velite configuration for blog and author collections, including schema definitions and transformations.
- Added logic to generate tag counts and search index in the velite prepare step.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,8 +24,8 @@
             "@/css/*": ["css/*"],
             "@/scripts/*": ["scripts/*"],
             "@/convex/*": ["convex/*"],
-            "contentlayer/generated": ["./.contentlayer/generated"],
-            "contentlayer2/generated": ["./.contentlayer/generated"]
+            "@/lib/*": ["lib/*"],
+            "#site/content": ["./.velite"]
         },
         "plugins": [
             {
@@ -42,8 +42,7 @@
         "**/*.ts",
         "**/*.tsx",
         "**/*.json",
-        ".contentlayer/generated",
-        ".contentlayer/generated/**/*.json",
+        ".velite",
         ".next/types/**/*.ts",
         ".next/dev/types/**/*.ts"
     ],
