--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,7 +6,7 @@
             "@/data/*": ["data/*"],
             "@/layouts/*": ["layouts/*"],
             "@/css/*": ["css/*"],
-            "contentlayer/generated": ["./.contentlayer/generated"]
+            "#site/content": ["./.velite"]
         }
     }
 }
