--- a/package.json
+++ b/package.json
@@ -4,17 +4,15 @@
     "private": true,
     "scripts": {
         "start": "next dev",
-        "dev": "concurrently -n 📝,🔄,⚡ -c magenta,yellow,cyan --kill-others-on-fail \"contentlayer2 dev\" \"pnpm dlx convex dev\" \"cross-env INIT_CWD=$PWD NODE_OPTIONS='--max-old-space-size=2048' next dev\"",
-        "dev:next": "cross-env INIT_CWD=$PWD NODE_OPTIONS='--max-old-space-size=2048' next dev",
+        "dev": "velite build && concurrently -n 🔄,⚡ -c yellow,cyan --kill-others-on-fail \"pnpm dlx convex dev\" \"cross-env INIT_CWD=$PWD NODE_OPTIONS='--max-old-space-size=2048' next dev\"",
+        "dev:next": "velite build && cross-env INIT_CWD=$PWD NODE_OPTIONS='--max-old-space-size=2048' next dev",
         "dev:convex": "pnpm dlx convex dev",
-        "dev:content": "contentlayer2 dev",
-        "build": "contentlayer2 build && cross-env INIT_CWD=$PWD next build && cross-env NODE_OPTIONS='--experimental-json-modules' node ./scripts/postbuild.mjs",
-        "build:content": "contentlayer2 build",
+        "build": "velite build && cross-env INIT_CWD=$PWD next build && cross-env NODE_OPTIONS='--experimental-json-modules' node ./scripts/postbuild.mjs",
         "serve": "next start",
         "analyze": "cross-env ANALYZE=true next build",
         "lint": "next lint --fix --dir pages --dir app --dir components --dir lib --dir layouts --dir scripts",
         "prettier": "prettier --write .",
-        "clean": "rm -rf .next .contentlayer node_modules/.cache",
+        "clean": "rm -rf .next .velite node_modules/.cache",
         "typecheck": "tsc --noEmit"
     },
     "dependencies": {
@@ -32,9 +30,8 @@
         "autoprefixer": "^10.4.13",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
-        "contentlayer2": "0.5.8",
         "convex": "^1.31.2",
-        "esbuild": "0.18.11",
+
         "github-slugger": "^1.4.0",
         "gray-matter": "^4.0.2",
         "gsap": "^3.12.5",
@@ -44,7 +41,6 @@
         "lucide-react": "^0.563.0",
         "motion": "^12.23.26",
         "next": "16.1.1",
-        "next-contentlayer2": "0.5.8",
         "next-themes": "^0.2.1",
         "pliny": "0.4.1",
         "postcss": "^8.4.24",
@@ -62,7 +58,6 @@
         "rehype-autolink-headings": "^6.1.0",
         "rehype-citation": "^1.0.2",
         "rehype-katex": "^6.0.3",
-        "rehype-preset-minify": "6.0.0",
         "rehype-prism-plus": "^1.6.0",
         "rehype-raw": "^7.0.0",
         "rehype-slug": "^5.1.0",
@@ -94,7 +89,8 @@
         "postcss-nesting": "^13.0.2",
         "prettier": "^3.0.0",
         "prettier-plugin-tailwindcss": "^0.4.1",
-        "typescript": "^5.1.3"
+        "typescript": "^5.1.3",
+        "velite": "^0.3.1"
     },
     "resolutions": {
         "@opentelemetry/api": "1.4.1",
