chore: move onlyBuiltDependencies to package.json and remove pnpm-workspace.yaml

--- a/package.json
+++ b/package.json
@@ -109,5 +109,12 @@
         "*.+(js|jsx|ts|tsx|json|css|md|mdx)": [
             "prettier --write"
         ]
+    },
+    "pnpm": {
+        "onlyBuiltDependencies": [
+            "esbuild",
+            "protobufjs",
+            "sharp"
+        ]
     }
 }
